# ads-in-generative-ir

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
ads_in_generative_ir/: __init__.py
ads_in_generative_ir/classify/: evaluate.py  model_wrapper.py  models.py  response_ds.py  sentence_ds.py  train.py
ads_in_generative_ir/collect/: extraction.py  filtering.py
ads_in_generative_ir/detect/: analyze_predictions.py  detect_advertisements_alpaca.py  detect_advertisements_gpt4.py  detect_advertisements_mistral.py  postprocess_detections.py
ads_in_generative_ir/generate/: inject_advertisements.py  manual_judgements.py  rouge_scores.py  select_advertisements.py  suggest_advertisements.py  utils.py
ads_in_generative_ir/resources/advertisements/: banking_qualities.csv  banking_query_pairs.csv  car_qualities.csv  car_query_pairs.csv  gaming_qualities.csv  gaming_query_pairs.csv  healthcare_qualities.csv  healthcare_query_pairs.csv  real_estate_qualities.csv  real_estate_query_pairs.csv  restaurant_qualities.csv  restaurant_query_pairs.csv  shopping_qualities.csv  shopping_query_pairs.csv  streaming_qualities.csv  streaming_query_pairs.csv  vacation_qualities.csv  vacation_query_pairs.csv  workout_qualities.csv  workout_query_pairs.csv
ads_in_generative_ir/resources/queries/: banking_queries.txt  car_queries.txt  gaming_queries.txt  healthcare_queries.txt  real_estate_queries.txt  restaurant_queries.txt  shopping_queries.txt  streaming_queries.txt  vacation_queries.txt  workout_queries.txt
